tests/NormalTests/paczka1/small_fuzzy/64354593.err
Error in line 2: S590 A892 17,1
Error in line 8: xyOOKLa9 A892 93,7
Error in line 6: Oaf4 S590 88,5
Error in line 15: Oaf4 A892 93,0
